<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/txt_mainmenu"
        android:layout_width="256dp"
        android:layout_height="59dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="631dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/txt_maimmenu"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="659dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/compasstxt"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="209dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/compass"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="659dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/AvailableSensors"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="659dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/sensorInformation"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="108dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="49dp"
        android:contentDescription="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/phoneinfo" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="90dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/sensoravab" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="92dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="591dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/inform" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="520dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/aclonica"
        android:text="@string/click_here_for_n_app_guide"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/compassImagebtn"
        android:layout_width="149dp"
        android:layout_height="148dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="283dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_compass"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>