<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AmbientSensor">

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="463dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="463dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_sensordata"
        android:layout_width="289dp"
        android:layout_height="416dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        android:scrollbarSize="12dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="360dp"
        android:layout_height="96dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbt_celsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:checked="true"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/txt_fah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/show_text"
        android:layout_width="307dp"
        android:layout_height="59dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="81dp"
        android:fontFamily="@font/aclonica"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_sensordata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>